--- a/app/views/international-arrivals/v3/point-of-entry.html
+++ b/app/views/international-arrivals/v3/point-of-entry.html
@@ -15,7 +15,7 @@
   </p>
 </div>
 
-<a class="govuk-back-link" href="/international-arrivals/{{version}}/final-destination">Back</a>
+<a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 
 {% endblock %}
 
@@ -25,7 +25,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/international-arrivals/{{version}}/travel-route" method="post">
+      <form action="/international-arrivals/{{version}}/mobile-number" method="post">
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper">
