--- a/app/views/international-arrivals/v3/travel-details-same-person-1.html
+++ b/app/views/international-arrivals/v3/travel-details-same-person-1.html
@@ -15,7 +15,15 @@
   </p>
 </div>
 
-<a class="govuk-back-link" href="/international-arrivals/{{version}}/passport-number-person-1">Back</a>
+<!-- {% if data['red-country-travel'] == "Yes" %}
+<a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed-red">Back</a>
+{% else %}
+<a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed">Back</a>
+{% endif %} -->
+
+<a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
+
+
 
 {% endblock %}
 
@@ -28,7 +36,7 @@
     <form action="/international-arrivals/{{version}}/action3/travel-details-same-person-1" method="post" novalidate>
 
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
-        Are the next person's travel details the same as {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Appleseed' }}'s?
+        Are the next person's travel details the same as {{ data['first-name'] or 'Jon' }} {{ data['last-name'] or 'Appleseed' }}'s?
       </h1>
 
       <table class="govuk-table">
@@ -48,7 +56,7 @@
             <td class="govuk-table__cell govuk-!-padding-left-2" style="border-left: 1px solid #b1b4b6">{{ data['country-autocomplete'] or 'Italy' }}</td>
           </tr>
           <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header govuk-!-width-one-half">Final country destination</th>
+            <th scope="row" class="govuk-table__header govuk-!-width-one-half">Destination country</th>
             <td class="govuk-table__cell govuk-!-padding-left-2" style="border-left: 1px solid #b1b4b6">{{ data['final-destination'] or 'England' }}</td>
           </tr>
           <tr class="govuk-table__row">
