--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -2,93 +2,164 @@
 @import 'node_modules/nhsuk-frontend/packages/core/all';
 
 .account-home-button {
-    width: 100%; 
-    position: relative; 
-    text-align: left; 
-    display: flex; 
-    flex-direction: row;
-    align-items: center; 
-    justify-content: space-between;
-    text-decoration: none; 
-    background-color: #ffffff; 
-    border-top: 1px solid #d7dde0; 
-    border-bottom: 1px solid #d7dde0; 
-    border-left: none; 
-    border-right: none; 
-    padding: 1rem; 
-    cursor: pointer
+  width: 100%; 
+  position: relative; 
+  text-align: left; 
+  display: flex; 
+  flex-direction: row;
+  align-items: center; 
+  justify-content: space-between;
+  text-decoration: none; 
+  background-color: #ffffff; 
+  border-top: 1px solid #d7dde0; 
+  border-bottom: 1px solid #d7dde0; 
+  border-left: none; 
+  border-right: none; 
+  padding: 1rem; 
+  cursor: pointer
 }
 
 .proto-action {
-  position: fixed;
-  right: 0;
-  bottom: 60px;
-  width: 114px;
-  height: 35px;
-  background-color: #ffeb3b;
-  box-shadow: -7px -7px 12px -7px rgba(0,0,0,0.85);
-  a {
-    text-decoration: none;
-    display: block;
-  }
+position: fixed;
+right: 0;
+bottom: 60px;
+width: 114px;
+height: 35px;
+background-color: #ffeb3b;
+box-shadow: -7px -7px 12px -7px rgba(0,0,0,0.85);
+a {
+  text-decoration: none;
+  display: block;
+}
 }
 
 .proto-action-text {
-  position: relative;
-  display: inline-block;
-  vertical-align: top;
-  font-size: 1.3em;
-  font-weight: bold;
+position: relative;
+display: inline-block;
+vertical-align: top;
+font-size: 1.3em;
+font-weight: bold;
 }
 
 .proto-action.big {
-  width: 35%;
-  height: 7%;
+width: 35%;
+height: 7%;
 }
-  
+
 .proto-action.big a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 100%;
 }
 
 @media (min-width: 40.0625em) {
-  .proto-action.big {
-    width: 16%;
-    height: 6%;
-  }
+.proto-action.big {
+  width: 16%;
+  height: 6%;
+}
 }
 
 .white-text {
-  color: #ffffff;
+color: #ffffff;
 }
 
 .border-bottom-white {
-  border-bottom: 1px solid #ffffff;
+border-bottom: 1px solid #ffffff;
 }
 
 @media (max-width: 40.0625em) {
-  .border-bottom-white.desktop-only {
-    border-bottom: none;
-  }
-  .nhsuk-footer__list-item.desktop-only,
-  .nhsuk-header__transactional-service-name.desktop-only {
-    display: none;
-  }
+.border-bottom-white.desktop-only {
+  border-bottom: none;
+}
+.nhsuk-footer__list-item.desktop-only,
+.nhsuk-header__transactional-service-name.desktop-only {
+  display: none;
+}
 }
 
 .nhsuk-card__link.stackable {
-  margin-right: 30px;
+margin-right: 30px;
 }
 
 @media (max-width: 40.0625em) {
-  .nhsuk-card__link.stackable {
-    display: block;
-    margin-right: 0;
-  }
+.nhsuk-card__link.stackable {
+  display: block;
+  margin-right: 0;
+}
 }
 
 .nhsuk-list.spaced li {
-  margin-bottom: 20px;
+margin-bottom: 10px;
+background: #fff;
+border: 1px solid #d8dde0;
+position: relative;
+border: none;
+padding: 1em;
+}
+
+@media (min-width: 40.0625em) {
+.nhsuk-card__link.stackable {
+  width: 100%;
+}
+}
+
+.nhsuk-list.spaced a {
+word-break: break-all;
+}
+
+.bulleted-summary-list,
+.bulleted-summary-list h3 {
+position: relative;
+}
+
+@media (min-width: 40.0625em) {
+.bulleted-summary-list {
+  padding-left: 4em;
+}
+.bulleted-summary-list:before {
+  height: 98%;
+  width: 2px;
+  content: '';
+  background-color:	#005eb8;
+  position: absolute;
+  left: .75em;
+  bottom: 0;
+}
+.bulleted-summary-list h3:before {
+  height: 20px;
+  width: 20px;
+  content: '';
+  background-color:	#005eb8;
+  border-radius: 50%;
+  position: absolute;
+  left: -2.55em;
+  top: .2em;
+}
+.bulleted-summary-list:after {
+  height: 5px;
+  width: 20px;
+  content: '';
+  background-color:	#005eb8;
+  position: absolute;
+  left: .2em;
+  bottom: 0;
+}
+}
+
+.right-link {
+display: block;
+// padding-left: 1.5em;
+}
+
+@media (min-width: 40.0625em) {
+.relative {
+  position: relative;
+}
+.right-link {
+  position: absolute; 
+  right: 0; 
+  top: .4em;
+  // padding: 0 .8em
+}
 }
