--- a/app/views/international-arrivals/v3/confirmation.html
+++ b/app/views/international-arrivals/v3/confirmation.html
@@ -1,5 +1,7 @@
 {% set version = "v3" %}
-{% set pageTitle = "We've received your order" %}
+{% set pageTitle = "Here are your travel test package details" %}
+
+
 
 {% extends "includes/layout-intl-arrivals.html" %}
 
@@ -15,10 +17,6 @@
   </p>
 </div>
 
-{% if data['coronavirus-account'] == "Yes" %}
-  {% include "includes/account-menu.html" %}
-{% endif %}
-
 {% endblock %}
 
 {% block content %}
@@ -31,31 +29,74 @@
       <h1 class="govuk-panel__title">
         {{pageTitle}}<br>
       </h1>
-      <p class="govuk-heading-l" style="color: white; font-weight: 200;">Booking reference number<br><strong>NHSTT0720749</strong></p>
     </div>
 
+    {% if data['first-name-person-1'] %}
+    <p class="govuk-body">We've received your order for 2 travel test packages.</p>
+    <p class="govuk-body">We'll send you an email to confirm the details. If you're travelling with other people on this order, we'll also send them an email.</p>
+    {% else %}
+    <p class="govuk-body">We've received your order for 2 travel test packages.</p>
+    <p class="govuk-body">We'll send you an email to confirm the details. If you're travelling with other people on this order, we'll also send them an email.</p>
+    {% endif %}
+
+
+    <h2 class="govuk-heading-m govuk-!-margin-top-6">Traveller details</h2>
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Jon Appleseed
+        </dt>
+        <dd class="govuk-summary-list__value">           
+         <span class="govuk-body govuk-!-font-weight-bold">Unique booking reference: NHSRD1234567</span> <br />
+          Date of birth: 4 January 1982
+        </dd>      
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Sophie Appleseed
+        </dt>
+        <dd class="govuk-summary-list__value">        
+          <span class="govuk-body govuk-!-font-weight-bold">Unique booking reference: NHSRD1234987</span> <br />
+          Date of birth: 4 January 1989 
+        </dd>      
+      </div>
+    </dl>
+
+    <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
     <p class="govuk-body">
-      {% if data['travel-route'] and data['travel-route-same-person-1'] %}
-      We've received your order for 2 travel test packages. We'll send your confirmation by email.
-      {% else %}
-      We've received your order for 1 travel test package. We'll send your confirmation by email.
-      {% endif %}
+      You need to enter your unique booking reference when you complete the online <a class="govuk-body" href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk">passenger locator form</a> (PLF). You can submit the PLF any time in the 48 hours before you arrive in the UK. You will not be able to travel if you do not complete the PLF.
     </p>
 
-    <h3 class="govuk-heading-s govuk-!-margin-top-6">What happens next</h3>
-    <p class="govuk-body">
-      Enter your booking reference number in the <a class="govuk-body" href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk">passenger Locator Form</a> (PLF). You can use the same booking reference number for each person in your order.<br><br>
-      You must fill in the PLF within 48 hours of the start of your journey to the UK. You will not be able to travel if you do not complete the PLF.
-    </p>
+    <h2 class="govuk-heading-m">When you get your test kits</h2>
 
-    <h3 class="govuk-heading-s govuk-!-margin-top-6">If your travel plans change</h3>
+    <p>It is important that each person on this order uses the test kit that is addressed to 
+      them. This will make sure that they receive the correct test result. </p>
+
+      <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">Warning</span>
+          They no longer need to register their test kit. It has already been registered 
+for them.
+        </strong>
+      </div>
+
+    <h3 class="govuk-heading-m govuk-!-margin-top-6">If your travel plans change</h3>
     <p class="govuk-body govuk-!-margin-bottom-2">
       Call our contact centre:
     </p>
     <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-3">
       <li>0151 676 0491 from the UK</li>
-      <li>+44 (0) 0151 676 0491 from outside the UK</li>
+      <li>+44 (0)151 676 0491 from outside the UK</li>
     </ul>
+
+    <p class="govuk-body">
+      You may need to provide the order number for your group's booking.
+    </p>
+    <p class="govuk-body">
+      Order number: XXXXXXXXXXXX
+    </p>
 
   </div>
 </div>
