--- a/app/views/international-arrivals/v3/date-of-birth-person-1.html
+++ b/app/views/international-arrivals/v3/date-of-birth-person-1.html
@@ -1,5 +1,5 @@
 {% set version = "v3" %}
-{% set pageTitle = "What's your date of birth?" %}
+{% set pageTitle = "What is your date of birth?" %}
 
 {% extends "includes/layout-intl-arrivals.html" %}
 
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/name-person-1">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                {{ pageTitle }}
+                What is {{ data['first-name-person-1'] or 'Sophie' }} {{ data['last-name-person-1'] or 'Appleseed' }}'s date of birth?
               </h1>
             </legend>
             <div id="dob-hint" class="govuk-hint">
