--- a/app/views/international-arrivals/v3/email-address-person-1.html
+++ b/app/views/international-arrivals/v3/email-address-person-1.html
@@ -28,19 +28,31 @@
       <form action="/international-arrivals/{{version}}/vaccine-person-1" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+          <fieldset class="govuk-fieldset" aria-describedby="email-address-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
                 What is {{ data['first-name-person-1'] or 'Sophie' }} {{ data['last-name-person-1'] or 'Appleseed' }}'s email address?
               </h1>
             </legend>
-            <p class="govuk-body">
-              We'll send their booking reference number to this email address.
-            </p>
+            <p>We'll send their unique booking reference and test results to this email address.</p>
+
+            <p>Get their permission before you enter their email address.</p>
+
+            <p>Make sure they're happy for their test results to go to this email address. Do not 
+              use a work or shared email address unless they're comfortable with others 
+              seeing their results.</p>
+
+            <!-- <p>Children need to be aged 16 and over to receive their results. If the child is 
+              younger than 16, you (their parent or guardian) should enter your email address 
+              here.</p> -->
+
             <div class="govuk-form-group govuk-!-margin-top-5">
               <label class="govuk-label" for="email-address-person-1">
                 Email address
               </label>
+              <div id="email-address-hint" class="govuk-hint">
+                For example, name@example.com.
+              </div>
               <input class="govuk-input govuk-!-width-two-thirds" id="email-address-person-1" name="email-address-person-1" type="text" spellcheck="false" value="{{ data['email-address-person-1'] }}">
             </div>
             <div class="govuk-form-group govuk-!-margin-top-2">
