--- a/app/views/international-arrivals/v3/email-address.html
+++ b/app/views/international-arrivals/v3/email-address.html
@@ -28,19 +28,21 @@
       <form action="/international-arrivals/{{version}}/vaccine" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+          <fieldset class="govuk-fieldset" aria-describedby="email-address-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
                 {{ pageTitle }}
               </h1>
             </legend>
-            <p class="govuk-body">
-              We'll send your booking reference number to this email address.
-            </p>
+            <p>We'll send an email confirmation code, your unique booking reference and your 
+              test results to this email address.</p>
             <div class="govuk-form-group govuk-!-margin-top-5">
               <label class="govuk-label" for="email-address">
                 Email address
               </label>
+              <div id="email-address-hint" class="govuk-hint">
+                For example, name@example.com.
+              </div>
               <input class="govuk-input govuk-!-width-two-thirds" id="email-address" name="email-address" type="text" spellcheck="false" value="{{ data['email-address'] }}">
             </div>
             <div class="govuk-form-group govuk-!-margin-top-2">
