--- a/app/views/international-arrivals/v3/ethnic-background-another.html
+++ b/app/views/international-arrivals/v3/ethnic-background-another.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/ethnic-group">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-group">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -33,9 +33,9 @@
                 {{ pageTitle }}
               </h1>
             </legend>
-            <span id="ethnic-background-hint" class="govuk-body">
+            <div id="ethnic-background-hint" class="govuk-hint">
               This will help us understand how coronavirus is affecting people of different ethnic backgrounds.
-            </span>
+            </div>
             <div class="govuk-radios govuk-!-margin-top-6">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="ethnic-background-1" name="ethnic-background" type="radio" value="Arab" {{ checked("ethnic-background", "Arab") }}>
