--- a/app/views/international-arrivals/v3/index.html
+++ b/app/views/international-arrivals/v3/index.html
@@ -1,5 +1,5 @@
 {% set version = "v3" %}
-{% set pageTitle = "Book or replace a travel test package to enter the UK" %}
+{% set pageTitle = "Book a travel test package to enter the UK" %}
 
 {% extends "includes/layout-intl-arrivals.html" %}
 
@@ -22,22 +22,44 @@
 
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">{{ pageTitle }}</h1>
 
-      <p class="govuk-body">
+      <p class="govuk-body"> 
         Order and pay for coronavirus (COVID-19) tests if you're travelling to the UK from a country that's not on the red list. You need to do this at least 2 days before you arrive in the UK.
       </p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>A travel test package of 1 PCR test (day 2) costs £68</li>
-        <li>A travel test package of 2 PCR tests (day 2 and day 8) costs £136</li>
-      </ul>
       <p class="govuk-body">
-        We'll send tests to the UK delivery address you give us. You should get them in time to take your day 2 test.<br><br>
-        Day 1 counts as the day after your arrival in the UK.
-      </p>
+        A travel test package costs £68 and includes a PCR arrival test. You can take the test after you arrive in the UK as soon as you receive it, but not later than day 2. Day 1 counts as the day after your arrival in the UK.
+    </p>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Who is this for?</h2>
+
       <p class="govuk-body">
-        You can order travel test packages for yourself and other people. They must be travelling with you and have the same delivery address as you.
+        You only need to order a travel test package if you do not qualify as fully vaccinated and you're aged 18 and over.
       </p>
+
+      <p class="govuk-body govuk-!-margin-bottom-1">You do not need a travel test package if you:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>qualify as fully vaccinated</li>
+          <li>are aged 17 and under (even if you're not vaccinated)</li>
+        </ul>
+
+        <ul class="govuk-list">
+          <li>
+            <a class="govuk-link" href="https://www.gov.uk/guidance/countries-with-approved-covid-19-vaccination-programmes-and-proof-of-vaccination">Check if you qualify as fully vaccinated or not in England</a>
+          </li>
+          <li>
+            <a class="govuk-link" href="https://www.gov.scot/publications/coronavirus-covid-19-international-travel-quarantine/">Check if you qualify as fully vaccinated or not in Scotland</a>
+          </li>
+          <li>
+            <a class="govuk-link" href="https://gov.wales/check-if-your-proof-covid-19-vaccination-valid-travel-wales">Check if you qualify as fully vaccinated or not in Wales</a>
+          </li>
+          <li>
+            <a class="govuk-link" href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-vaccination-status-travel">Check if you qualify as fully vaccinated or not in Northern Ireland</a>
+          </li>
+        </ul>
+
+      <p class="govuk-body">
+        You can order travel test packages for yourself and up to 9 other people. They must be travelling with you and have the same delivery address as you.
+      </p>
+
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">What you need before you start</h2>
       <ul class="govuk-list govuk-list--bullet">
@@ -46,32 +68,44 @@
         <li>Flight or Eurostar number or ferry name</li>
         <li>Payment card (international payment cards are accepted)</li>
         <li>Email address</li>
-        <li>Booking reference number (if you're replacing test kits)</li>
+        <li>Unique booking reference (if you're replacing test kits)</li>
       </ul>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">How to request a refund or replacement test kit</h2>
       <p class="govuk-body">
-        To request a refund, call this number before your test kit is sent (usually the day you're due to arrive in the UK) or we cannot guarantee a full refund. You'll need your order details, including your booking reference number.<br><br>
+        To request a refund, call this number before your test kit is sent (usually the day before you're due to arrive in the UK) or we cannot guarantee a full refund. You'll need your order details, including the unique booking reference.
+      </p>
+
+      <p class="govuk-body">
         You can also call this number to arrange a replacement kit.
       </p>
       <p class="govuk-body">
         For more details see our <a href="#">terms and conditions</a>.
       </p>
 
-      <a href="/international-arrivals/{{version}}/travel-package-exempt" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-7 govuk-button--start" data-module="govuk-button">
+      <a href="/international-arrivals/{{version}}/final-destination" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-7 govuk-button--start" data-module="govuk-button">
         Start now
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
         </svg>
       </a>
 
-      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Which travel test package do you need?</h2>
-      <p class="govuk-body">
-        <a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19" class="govuk-link">Travel package rules for international arrival into England</a><br>
-        <a href="https://gov.wales/rules-international-travel-and-wales-coronavirus" class="govuk-link">Travel package rules for international arrival into Wales</a><br>
-        <a href="https://www.gov.scot/publications/coronavirus-covid-19-international-travel-quarantine/"  class="govuk-link">Travel package rules for international arrival into Scotland</a><br>
-        <a href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-travel-advice" class="govuk-link">Travel package rules for international arrival into Northern Ireland</a>
-      </p>
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Check the latest travel rules</h2>
+
+      <ul class="govuk-list">
+        <li>
+          <a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19" class="govuk-link">Travel test package rules for international arrival into England</a>
+        </li>
+        <li>
+          <a href="https://gov.wales/rules-international-travel-and-wales-coronavirus" class="govuk-link">Travel test package rules for international arrival into Wales</a>
+        </li>
+        <li>
+          <a href="https://www.gov.scot/publications/coronavirus-covid-19-international-travel-quarantine/" class="govuk-link">Travel test package rules for international arrival into Scotland</a>
+        </li>
+        <li>
+          <a href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-travel-advice" class="govuk-link">Travel test package rules for international arrival into Northern Ireland</a>
+        </li>
+      </ul>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Passenger locator form (PLF)</h2>
       <p class="govuk-body">
