--- a/app/views/international-arrivals/v3/order-summary.html
+++ b/app/views/international-arrivals/v3/order-summary.html
@@ -15,7 +15,7 @@
   </p>
 </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/delivery-address">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -31,24 +31,10 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-8">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            {{ data['first-name'] or 'Jonny' }} {{ data['last-name'] or 'Appleseed' }}
+            {{ data['first-name'] or 'Jon' }} {{ data['last-name'] or 'Appleseed' }}
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['email-address'] or 'jonnyappleseed@example.com' }}<br>
-            {{ data['mobile-phone-number'] or '+447782808451' }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/international-arrivals/{{version}}/check-your-answers">
-              Edit details<span class="govuk-visually-hidden">personal details</span>
-            </a>
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ data['first-name'] or 'Sophie' }} {{ data['last-name'] or 'Appleseed' }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ data['email-address'] or 'sophieappleseed@example.com' }}<br>
+            {{ data['email-address'] or 'j.appleseed@example.com' }}<br>
             {{ data['mobile-phone-number'] or '+447782808451' }}
           </dd>
           <dd class="govuk-summary-list__actions">
@@ -83,31 +69,10 @@
             Number of packages ordered
           </dt>
           <dd class="govuk-summary-list__value">
-            {% if data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "undefined" %}
-            1x travel test package of 1 test<br>
-            (£68.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "undefined" %}
-            1x travel test packages of 2 tests<br>
-            (£116.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 test" %}
-            2x travel test package of 1 test<br>
-            (£68.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "Day 2 test" %}
-            1x travel test package of 2 tests<br>
-            (£116.00 per person)<br>
-            1x travel test package of 1 test<br>
-            (£68.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            1x travel test package of 1 test<br>
-            (£68.00 per person)<br>
-            1x travel test package of 2 tests<br>
-            (£116.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            2x travel test package of 2 tests<br>
-            (£116.00 per person)
+            {% if data['travel-route-same-person-1'] %}
+            2 x Arrival test
             {% else %}
-            1x travel test package of 1 test<br>
-            (£68.00 per person)
+            1 x Arrival test
             {% endif %}
           </dd>
           <dd class="govuk-summary-list__actions">
@@ -143,18 +108,8 @@
             Total payment
           </dt>
           <dd class="govuk-summary-list__value">
-            {% if data['travel-route'] == "Day 2 test" and data['travel-route-same-person-1'] == "undefined" %}
-            £68.00
-            {% elseif data['travel-route'] == "Day 2 and day 8 tests" and data['travel-route-same-person-1'] == "undefined" %}
-            £116.00
-            {% elseif data['travel-route'] == "Day 2 test" and data['travel-route-same-person-1'] == "Day 2 test" %}
+            {% if data['travel-route-same-person-1'] %}
             £136.00
-            {% elseif data['travel-route'] == "Day 2 and day 8 tests" and data['travel-route-same-person-1'] == "Day 2 test" %}
-            £184.00
-            {% elseif data['travel-route'] == "Day 2 test" and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            £184.00
-            {% elseif data['travel-route'] == "Day 2 and day 8 tests" and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            £232.00
             {% else %}
             £68.00
             {% endif %}
@@ -172,17 +127,17 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="confirm" name="confirm" type="checkbox" value="Yes" onclick="checkBox()">
               <label class="govuk-label govuk-checkboxes__label" for="confirm">
-                I agree to the terms and conditions
+                I agree to the <a href="#" target="blank" class="govuk-link">terms and conditions (opens in a new tab or window)</a>
               </label>
             </div>
           </div>
         </fieldset>
       </div>
 
-      <form action="/international-arrivals/{{version}}/confirm-payment" method="post">
+      <form action="/international-arrivals/{{version}}/enter-card-details" method="post">
 
         <button id="button" disabled class="govuk-button govuk-!-margin-bottom-3" type="submit" data-module="govuk-button">
-          Finish order
+          Continue to payment
         </button>
 
       </form>
