--- a/app/views/international-arrivals/v3/passport-number-person-1.html
+++ b/app/views/international-arrivals/v3/passport-number-person-1.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/date-of-birth-person-1">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/international-arrivals/{{version}}/travel-route-same-person-1" method="post">
+      <form action="/international-arrivals/{{version}}/mobile-number-person-1" method="post">
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper">
