--- a/app/views/international-arrivals/v3/people-confirmed-person-1-red.html
+++ b/app/views/international-arrivals/v3/people-confirmed-person-1-red.html
@@ -1,4 +1,4 @@
-{% set version = "v4" %}
+{% set version = "v3" %}
 {% set pageTitle = "Confirm people for testing" %}
 
 {% extends "includes/layout-intl-arrivals.html" %}
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/check-your-answers-person-1">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 
 {% endblock %}
 
@@ -28,15 +28,90 @@
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
       <p class="govuk-body">
-        You can order travel test packages for yourself and up to 9 other people that you're travelling with. They must have the same delivery address as you.
+        You can order red self-quarantine packages for yourself and up to 9 other people that you're travelling with.<br><br>
+        They must have the same delivery address as you.<br><br>
+        In England, children aged 4 and under do not need a red self-quarantine package.<br><br>
+        Once you've confirmed who needs testing, you can complete and pay for your order.
       </p>
 
-      <p class="govuk-body">You only need to order a travel test package for people who do not qualify as fully vaccinated and are aged 18 and over. If they qualify as fully vaccinated or are aged 17 and under, they do not need to order a travel test package.</p>
-
-      <p class="govuk-body"><a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19#check-if-you-qualify-as-fully-vaccinated">Check if they qualify as fully vaccinated or not</a>.</p>
-
-      <p>Once you've confirmed who needs testing, you can complete and pay for your order.</p>
-
+<!-- 
+      <table class="govuk-table govuk-!-margin-bottom-0">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Name</th>
+            <th scope="col" class="govuk-table__header">Date of birth</th>
+            <th scope="col" class="govuk-table__header">Test</th>
+            <th scope="col" class="govuk-table__header">Amount</th>
+            <th scope="col" class="govuk-table__header"></th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</th>
+            <td class="govuk-table__cell">
+              {{ data['date-of-birth-day'] or '2' }}/{{ data['date-of-birth-month'] or '03' }}/{{ data['date-of-birth-year'] or '1979' }}
+            </td>
+            <td class="govuk-table__cell">
+              {{ data['travel-route'] or 'Day 2 and day 8 tests' }}
+            </td>
+            <td class="govuk-table__cell">
+              {% if data['travel-route'] == 'Day 2 test' %}
+              <p class="govuk-body-m">£68</p>
+              {% else %}
+              <p class="govuk-body-m">£136</p>
+              {% endif %}
+            </td>
+            <td class="govuk-table__cell">
+              <p class="govuk-body-m" style="display: flex; justify-content: flex-end;">
+                <a href="/international-arrivals/{{version}}/check-your-answers">Edit details</a>
+              </p>
+            </td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header" style="border-bottom: none">{{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Smith' }}</th>
+            <td class="govuk-table__cell" style="border-bottom: none">
+              {{ data['dob-day-person-1'] or '2' }}/{{ data['dob-month-person-1'] or '06' }}/{{ data['dob-year-person-1'] or '1984' }}
+            </td>
+            <td class="govuk-table__cell" style="border-bottom: none">
+              {{ data['travel-route-same-person-1'] or 'Day 2 and day 8 tests' }}
+            </td>
+            <td class="govuk-table__cell" style="border-bottom: none">
+              {% if data['travel-route-same-person-1'] == 'Day 2 test' %}
+              <p class="govuk-body-m">£68</p>
+              {% else %}
+              <p class="govuk-body-m">£136</p>
+              {% endif %}
+            </td>
+            <td class="govuk-table__cell" style="border-bottom: none">
+              <p class="govuk-body-m" style="display: flex; justify-content: flex-end;">
+                <a href="/international-arrivals/{{version}}/check-your-answers-person-1">Edit details</a>
+              </p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="govuk-table govuk-!-margin-bottom-8 govuk-!-margin-top-0">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-padding-0"></th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-padding-0"></th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-padding-0"></th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header" style="border: none">
+   
+            </th>
+            <td class="govuk-table__cell" style="border: none">
+          
+            </td>
+            <td class="govuk-table__cell">
+              <p class="govuk-body-m" style="display: flex; justify-content: flex-end;"><strong class="govuk-!-padding-right-4">Amount to pay</strong> {% if data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "undefined" %}£68{% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "undefined" %}£136{% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 test" %}£136{% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "Day 2 test" %}£204{% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}£204{% else %}£272{% endif %}</p>
+            </td>
+          </tr>
+        </tbody>
+      </table> -->
 
       <div class="info-summary">
         <div>
@@ -69,8 +144,8 @@
             {% else %}
             6 December 1976
             {% endif %}<br>
-            Day 2 test<br>
-            £68<br>
+            Red self-quarantine package<br>
+            £300<br>
             <a href="/international-arrivals/{{version}}/check-your-answers">Edit details</a>
           </p>
           <p class="govuk-body">
@@ -102,8 +177,8 @@
             {% else %}
             2 June 1984
             {% endif %}<br>
-            Day 2 test<br>
-            £68<br>
+            Red self-quarantine package<br>
+            £300<br>
             <a href="/international-arrivals/{{version}}/check-your-answers">Edit details</a>
           </p>
         </div>
@@ -111,7 +186,7 @@
           {% if data['travel-package-exempt'] == "Yes, I'm ordering on behalf of an asylum seeker" or data['travel-package-exempt'] == "Yes, I need a replacement test kit" %}
           £0.00
           {% else %}
-          £136
+          £600
           {% endif %}
         </p>
       </div>
