--- a/app/views/international-arrivals/v3/people-confirmed-person-1.html
+++ b/app/views/international-arrivals/v3/people-confirmed-person-1.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/check-your-answers-person-1">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 
 {% endblock %}
 
@@ -28,16 +28,19 @@
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
       <p class="govuk-body">
-        You can order travel test packages for other people that you're travelling with. They must have the same delivery address as you.<br><br>
-        In England, Wales and Northern Ireland, children aged 4 and under do not need to take a day 2 or day 8 test.<br><br>
-        In Scotland, children aged 10 and under do not need to take a day 2 or day 8 test.<br><br>
-        Once you've confirmed who needs testing, you can complete and pay for your order.
+        You can order travel test packages for yourself and up to 9 other people that you're travelling with. They must have the same delivery address as you.
       </p>
+
+      <p class="govuk-body">You only need to order a travel test package for people who do not qualify as fully vaccinated and are aged 18 and over. If they qualify as fully vaccinated or are aged 17 and under, they do not need to order a travel test package.</p>
+
+      <p class="govuk-body"><a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19#check-if-you-qualify-as-fully-vaccinated">Check if they qualify as fully vaccinated or not</a>.</p>
+
+      <p>Once you've confirmed who needs testing, you can complete and pay for your order.</p>
 
       <div class="info-summary">
         <div>
           <p class="govuk-body">
-            <strong>{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Appleseed' }}</strong><br>
+            <strong>{{ data['first-name'] or 'Jon' }} {{ data['last-name'] or 'Appleseed' }}</strong><br>
             {% if data['dob-month'] == "1" or data['dob-month'] == "01" %}
             {{ data['dob-day'] }} January {{ data['dob-year'] }}
             {% elseif data['dob-month'] == "2" or data['dob-month'] == "02" %}
@@ -65,12 +68,8 @@
             {% else %}
             6 December 1976
             {% endif %}<br>
-            {{ data['travel-route'] or 'Day 2 and day 8 test' }}<br>
-            {% if data['travel-route'] == 'Day 2 test' %}
-            £68
-            {% else %}
-            £116
-            {% endif %}<br>
+            Day 2 test<br>
+            £68<br>
             <a href="/international-arrivals/{{version}}/check-your-answers">Edit details</a>
           </p>
           <p class="govuk-body">
@@ -102,12 +101,8 @@
             {% else %}
             2 June 1984
             {% endif %}<br>
-            {{ data['travel-route-same-person-1'] or 'Day 2 and day 8 test' }}<br>
-            {% if data['travel-route-same-person-1'] == 'Day 2 test' %}
-            £68
-            {% else %}
-            £116
-            {% endif %}<br>
+            Day 2 test<br>
+            £68<br>
             <a href="/international-arrivals/{{version}}/check-your-answers">Edit details</a>
           </p>
         </div>
@@ -115,7 +110,7 @@
           {% if data['travel-package-exempt'] == "Yes, I'm ordering on behalf of an asylum seeker" or data['travel-package-exempt'] == "Yes, I need a replacement test kit" %}
           £0.00
           {% else %}
-          {% if data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "undefined" %}£68{% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "undefined" %}£116{% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 test" %}£136{% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "Day 2 test" %}£184{% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}£184{% else %}£232{% endif %}
+            £136
           {% endif %}
         </p>
       </div>
@@ -123,7 +118,7 @@
       <div class="inline-buttons-wrapper govuk-!-margin-top-8">
         <form class="form" action="/international-arrivals/{{version}}/delivery-address" method="post">
           <button class="govuk-button" data-module="govuk-button">
-            Finish order
+            Continue to payment
           </button>
         </form>
         <form class="form" action="#" method="post">
