--- a/app/views/international-arrivals/v3/people-confirmed-red.html
+++ b/app/views/international-arrivals/v3/people-confirmed-red.html
@@ -1,4 +1,4 @@
-{% set version = "v4" %}
+{% set version = "v3" %}
 {% set pageTitle = "Confirm people for testing" %}
 
 {% extends "includes/layout-intl-arrivals.html" %}
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/check-your-answers-person-1">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 
 {% endblock %}
 
@@ -28,16 +28,12 @@
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
       <p class="govuk-body">
-        You can order travel test packages for yourself and up to 9 other people that you're travelling with. They must have the same delivery address as you.
+        You can order red self-quarantine packages for yourself and up to 9 other people that you're travelling with.<br><br>
+        They must have the same delivery address as you.<br><br>
+        In England, children aged 4 and under do not need a red self-quarantine package.<br><br>
+        Once you've confirmed who needs testing, you can complete and pay for your order.
       </p>
-
-      <p class="govuk-body">You only need to order a travel test package for people who do not qualify as fully vaccinated and are aged 18 and over. If they qualify as fully vaccinated or are aged 17 and under, they do not need to order a travel test package.</p>
-
-      <p class="govuk-body"><a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19#check-if-you-qualify-as-fully-vaccinated">Check if they qualify as fully vaccinated or not</a>.</p>
-
-      <p>Once you've confirmed who needs testing, you can complete and pay for your order.</p>
-
-
+      
       <div class="info-summary">
         <div>
           <p class="govuk-body">
@@ -69,49 +65,16 @@
             {% else %}
             6 December 1976
             {% endif %}<br>
-            Day 2 test<br>
-            £68<br>
-            <a href="/international-arrivals/{{version}}/check-your-answers">Edit details</a>
-          </p>
-          <p class="govuk-body">
-            <strong>{{ data['first-name-person-1'] or 'Sophie' }} {{ data['last-name-person-1'] or 'Appleseed' }}</strong><br>
-            {% if data['dob-month-person-1'] == "1" or data['dob-month-person-1'] == "01" %}
-            {{ data['dob-day-person-1'] }} January {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "2" or data['dob-month-person-1'] == "02" %}
-            {{ data['dob-day-person-1'] }} February {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "3" or data['dob-month-person-1'] == "03" %}
-            {{ data['dob-day-person-1'] }} March {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "4" or data['dob-month-person-1'] == "04" %}
-            {{ data['dob-day-person-1'] }} April {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "5" or data['dob-month-person-1'] == "05" %}
-            {{ data['dob-day-person-1'] }} May {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "6" or data['dob-month-person-1'] == "06" %}
-            {{ data['dob-day-person-1'] }} June {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "7" or data['dob-month-person-1'] == "07" %}
-            {{ data['dob-day-person-1'] }} July {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "8" or data['dob-month-person-1'] == "08" %}
-            {{ data['dob-day-person-1'] }} August {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "9" or data['dob-month-person-1'] == "09" %}
-            {{ data['dob-day-person-1'] }} September {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "10" %}
-            {{ data['dob-day-person-1'] }} October {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "11" %}
-            {{ data['dob-day-person-1'] }} November {{ data['dob-year-person-1'] }}
-            {% elseif data['dob-month-person-1'] == "12" %}
-            {{ data['dob-day-person-1'] }} December {{ data['dob-year-person-1'] }}
-            {% else %}
-            2 June 1984
-            {% endif %}<br>
-            Day 2 test<br>
-            £68<br>
+            Red self-quarantine package<br>
+            £300<br>
             <a href="/international-arrivals/{{version}}/check-your-answers">Edit details</a>
           </p>
         </div>
-        <p class="govuk-body-m"><strong class="govuk-!-padding-right-4">Amount to pay</strong>
+        <p class="govuk-body-m"><strong class="govuk-!-padding-right-4">Amount to pay</strong> 
           {% if data['travel-package-exempt'] == "Yes, I'm ordering on behalf of an asylum seeker" or data['travel-package-exempt'] == "Yes, I need a replacement test kit" %}
           £0.00
           {% else %}
-          £136
+          £300
           {% endif %}
         </p>
       </div>
@@ -122,7 +85,7 @@
             Continue to payment
           </button>
         </form>
-        <form class="form" action="#" method="post">
+        <form class="form" action="/international-arrivals/{{version}}/travel-details-same-person-1" method="post">
           <button class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">
             Add another person
           </button>
