--- a/app/views/international-arrivals/v4/confirmation.html
+++ b/app/views/international-arrivals/v4/confirmation.html
@@ -27,59 +27,66 @@
       <h1 class="govuk-panel__title">
         {{pageTitle}}<br>
       </h1>
-      <p class="govuk-heading-xl" style="color: white; font-weight: 200;">
-        <!-- Booking reference number<br><strong>HJK83JD</strong> -->
-        
-      </p>
+
     </div>
 
-    <p class="govuk-body">
+    
       {% if data['first-name-person-1'] %}
-      We've received your order for 2 travel test packages. If you’re travelling with other people on this order, we’ve sent separate emails confirming the details of each person.
+      <p class="govuk-body">We've received your order for 2 travel test packages.</p>
+      <p class="govuk-body">We'll send you an email to confirm the details. If you're travelling with other people on this order, we'll also send them an email.</p>
       {% else %}
-      We've received your order for 1 travel test package. If you’re travelling with other people on this order, we’ve sent separate emails confirming the details of each person.
+      <p class="govuk-body">We've received your order for 2 travel test packages.</p>
+      <p class="govuk-body">We'll send you an email to confirm the details. If you're travelling with other people on this order, we'll also send them an email.</p>
       {% endif %}
-    </p>
-    <!-- <p class="govuk-body">
-      You may need to show these details when you're travelling, so keep this email with you.
-    </p> -->
+    
 
-    <h3 class="govuk-heading-s govuk-!-margin-top-6">Traveller details</h3>
+    <h2 class="govuk-heading-m govuk-!-margin-top-6">Traveller details</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
           Jon Appleseed
         </dt>
-        <dd class="govuk-summary-list__value">
-          Date of birth: 4 Jan 1982 <br />
-          Unique booking reference: NHSRD1234567
+        <dd class="govuk-summary-list__value">           
+         <span class="govuk-body govuk-!-font-weight-bold">Unique booking reference: NHSRD1234567</span> <br />
+          Date of birth: 4 January 1982
         </dd>      
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
           Sophie Appleseed
         </dt>
-        <dd class="govuk-summary-list__value">
-          Date of birth: 4 Jan 1989 <br />
-          Unique booking reference: NHSRD1234987
+        <dd class="govuk-summary-list__value">        
+          <span class="govuk-body govuk-!-font-weight-bold">Unique booking reference: NHSRD1234987</span> <br />
+          Date of birth: 4 January 1989 
         </dd>      
       </div>
     </dl>
 
-    <h3 class="govuk-heading-s">What happens next</h3>
+    <h2 class="govuk-heading-m">What happens next</h2>
     <p class="govuk-body">
-      Enter your unique booking reference in the <a class="govuk-body" href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk">passenger locator form</a> (PLF).
+      You need to enter your unique booking reference when you complete the online <a class="govuk-body" href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk">passenger locator form</a> (PLF). You can submit the PLF any time in the 48 hours before you arrive in the UK. You will not be able to travel if you do not complete the PLF.
     </p>
-    <p class="govuk-body">
-      You can submit the PLF any time in the 48 hours before you arrive in the UK. You will not be able to travel if you do not complete the PLF.
-    </p>
-
-    <p class="govuk-body">
+    
+      <p class="govuk-body">
       <a href="https://book-travel-test-enter-uk.service.gov.uk/help/terms-and-conditions">See our terms and conditions</a>
     </p>
 
-    <h3 class="govuk-heading-s govuk-!-margin-top-6">If your travel plans change</h3>
+    <h2 class="govuk-heading-m">When you get your test kits</h2>
+
+    <p>It is important that each person on this order uses the test kit that is addressed to 
+      them. This will make sure that they receive the correct test result. </p>
+
+      <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">Warning</span>
+          They no longer need to register their test kit. It has already been registered 
+for them.
+        </strong>
+      </div>
+
+    <h2 class="govuk-heading-m govuk-!-margin-top-6">If your travel plans change</h2>
     <p class="govuk-body govuk-!-margin-bottom-2">
       Call our contact centre:
     </p>
