--- a/app/views/international-arrivals/v4/email-address.html
+++ b/app/views/international-arrivals/v4/email-address.html
@@ -33,8 +33,10 @@
             {{ pageTitle }}
             </label>
           </h1>
+          <p>We'll send an email confirmation code, your unique booking reference and your 
+            test results to this email address.</p>
           <div id="email-address-hint" class="govuk-hint">
-            We'll send an email confirmation code and your booking reference number to this email address.
+            For example, name@example.com.
           </div>
           <input class="govuk-input govuk-!-width-two-thirds" id="email-address" name="email-address" type="text" spellcheck="false" value="{{ data['email-address'] }}" aria-describedby="email-address-hint">
         </div>
