--- a/app/views/international-arrivals/v4/mobile-number-person-1.html
+++ b/app/views/international-arrivals/v4/mobile-number-person-1.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/travel-route-same-person-1">Back</a>
+  <a class="govuk-back-link" href="/international-arrivals/{{version}}/passport-number-person-1">Back</a>
 
 {% endblock %}
 
@@ -34,23 +34,35 @@
                 What is {{ data['first-name-person-1'] or 'Sophie' }} {{ data['last-name-person-1'] or 'Appleseed' }}'s mobile phone number?
               </h1>
             </legend>
-            <div id="mobile-number-hint" class="govuk-hint">
-              For international numbers, include the country code (for example, +33).
-            </div>
+            <p>We'll send their test results to this mobile number.</p>
+
+            <p>Get their permission before you enter their mobile number.</p>
+
+            <p>Make sure they're happy for their test results to go to this mobile number. Do not
+              use a work or shared mobile number unless they're comfortable with others 
+              seeing their results.</p>
+
+            <!-- <p>Children need to be aged 16 and over to receive their results. If the child is 
+              younger than 16, you (their parent or guardian) should enter your mobile 
+              number here.</p> -->
+            
 
             <div class="govuk-form-group govuk-!-margin-top-5">
               <label class="govuk-label" for="mobile-phone-number-person-1">
                 Mobile number
               </label>
-              <!-- <input class="govuk-input govuk-!-width-two-thirds" id="mobile-phone-number" name="mobile-phone-number" type="text" pattern="[0-9]*" inputmode="numeric" spellcheck="false" value="{{ data['mobile-phone-number'] }}"> -->
-              <input class="govuk-input govuk-!-width-two-thirds" id="mobile-phone-number" name="mobile-phone-number" type="text" spellcheck="false" value="{{ data['mobile-phone-number'] }}">
+              <div id="mobile-number-hint" class="govuk-hint">
+                For international numbers, include the country code (for example, +33).
+              </div>
+              <!-- <input class="govuk-input govuk-!-width-two-thirds" id="mobile-phone-number-person-1" name="mobile-phone-number-person-1" type="text" pattern="[0-9]*" inputmode="numeric" spellcheck="false" value="{{ data['mobile-phone-number-person-1'] }}"> -->
+              <input class="govuk-input govuk-!-width-two-thirds" id="mobile-phone-number-person-1" name="mobile-phone-number-person-1" type="text" spellcheck="false" value="{{ data['mobile-phone-number-person-1'] }}">
             </div>
             <div class="govuk-form-group govuk-!-margin-top-2">
               <label class="govuk-label" for="mobile-phone-number-confirm-person-1">
                 Confirm mobile number
               </label>
-              <!-- <input class="govuk-input govuk-!-width-two-thirds" id="mobile-phone-number-confirm" name="mobile-phone-number-confirm" type="text" pattern="[0-9]*" inputmode="numeric" spellcheck="false" value="{{ data['mobile-phone-number-confirm'] }}"> -->
-              <input class="govuk-input govuk-!-width-two-thirds" id="mobile-phone-number-confirm" name="mobile-phone-number-confirm" type="text" spellcheck="false" value="{{ data['mobile-phone-number-confirm'] }}">
+              <!-- <input class="govuk-input govuk-!-width-two-thirds" id="mobile-phone-number-confirm-person-1" name="mobile-phone-number-confirm-person-1" type="text" pattern="[0-9]*" inputmode="numeric" spellcheck="false" value="{{ data['mobile-phone-number-confirm-person-1'] }}"> -->
+              <input class="govuk-input govuk-!-width-two-thirds" id="mobile-phone-number-confirm-person-1" name="mobile-phone-number-confirm-person-1" type="text" spellcheck="false" value="{{ data['mobile-phone-number-confirm-person-1'] }}">
             </div>
 
           </fieldset>
