--- a/app/views/international-arrivals/v4/order-summary.html
+++ b/app/views/international-arrivals/v4/order-summary.html
@@ -69,50 +69,11 @@
             Number of packages ordered
           </dt>
           <dd class="govuk-summary-list__value">
-            {% if data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "undefined" %}
-            1x Day 2
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "undefined" %}
-            1x Day 2 and day 8
-            {% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 test" %}
-            2x Day 2
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "Day 2 test" %}
-            1x Day 2 and day 8<br>
-            1x Day 2
-            {% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            1x Day 2<br>
-            1x Day 2 and day 8
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            2x Day 2 and day 8
+            {% if data['travel-route-same-person-1'] %}
+            2 x Arrival test
             {% else %}
-            1x Day 2
+            1 x Arrival test
             {% endif %}
-
-            <!-- {% if data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "undefined" %}
-            1x travel test package of 1 test<br>
-            (£68.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "undefined" %}
-            1x travel test packages of 2 tests<br>
-            (£116.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 test" %}
-            2x travel test package of 1 test<br>
-            (£68.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "Day 2 test" %}
-            1x travel test package of 2 tests<br>
-            (£116.00 per person)<br>
-            1x travel test package of 1 test<br>
-            (£68.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 test' and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            1x travel test package of 1 test<br>
-            (£68.00 per person)<br>
-            1x travel test package of 2 tests<br>
-            (£116.00 per person)
-            {% elseif data['travel-route'] == 'Day 2 and day 8 tests' and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            2x travel test package of 2 tests<br>
-            (£116.00 per person)
-            {% else %}
-            1x travel test package of 1 test<br>
-            (£68.00 per person)
-            {% endif %} -->
           </dd>
           <dd class="govuk-summary-list__actions">
 
@@ -147,18 +108,8 @@
             Total payment
           </dt>
           <dd class="govuk-summary-list__value">
-            {% if data['travel-route'] == "Day 2 test" and data['travel-route-same-person-1'] == "undefined" %}
-            £68.00
-            {% elseif data['travel-route'] == "Day 2 and day 8 tests" and data['travel-route-same-person-1'] == "undefined" %}
-            £116.00
-            {% elseif data['travel-route'] == "Day 2 test" and data['travel-route-same-person-1'] == "Day 2 test" %}
+            {% if data['travel-route-same-person-1'] %}
             £136.00
-            {% elseif data['travel-route'] == "Day 2 and day 8 tests" and data['travel-route-same-person-1'] == "Day 2 test" %}
-            £184.00
-            {% elseif data['travel-route'] == "Day 2 test" and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            £184.00
-            {% elseif data['travel-route'] == "Day 2 and day 8 tests" and data['travel-route-same-person-1'] == "Day 2 and day 8 tests" %}
-            £232.00
             {% else %}
             £68.00
             {% endif %}
@@ -176,7 +127,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="confirm" name="confirm" type="checkbox" value="Yes" onclick="checkBox()">
               <label class="govuk-label govuk-checkboxes__label" for="confirm">
-                I agree to the <a href="#" target="blank" class="govuk-link">terms and conditions (opens in a new tab)</a>
+                I agree to the <a href="#" target="blank" class="govuk-link">terms and conditions (opens in a new tab or window)</a>
               </label>
             </div>
           </div>
