UTO - update start page option 2

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -436,24 +436,46 @@
             </li>
           </ul>
         </div>
-            </div>
+        </div>
 
-            <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
+            <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
               <div style="display: flex;">
-
-          <div class="govuk-grid-column-two-third">
-            <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">Live</strong>
-            <h3 class="govuk-heading-s">V4</h3>
-            <p class="govuk-body">Live service on 7 Jan 2022</p>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>
-                <a class="govuk-link--no-visited-state" href="/antigen/v6/home-testing/">Register Home Test Kit (includes RM barcode updates)</a>
-              </li>
-              <li>
-                <a href="/antigen/v6/refer-and-triage/guard-question">Refer and triage (includes interim follow-up guidance)</a>
-              </li>
-            </ul>
-          </div>
+                <div class="govuk-grid-column-one-third">
+                  <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">Live</strong>
+                  <h3 class="govuk-heading-s">V4</h3>
+                  <p class="govuk-body">Live service on 7 Jan 2022</p>
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                      <a class="govuk-link--no-visited-state" href="/antigen/v6/home-testing/">Register Home Test Kit (includes RM barcode updates)</a>
+                    </li>
+                    <li>
+                      <a href="/antigen/v6/refer-and-triage/guard-question">Refer and triage (includes interim follow-up guidance)</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="govuk-grid-column-one-third">
+                   <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">Live</strong>
+                   <h3 class="govuk-heading-s">V7</h3>
+                   <p class="govuk-body">IBT migration - home order journey - Jan 22</p>
+                   <ul class="govuk-list govuk-list--bullet">
+                     <li>
+                       <a class="govuk-link--no-visited-state" href="/antigen/v7/govuk/get-coronavirus-test">Register Home Test Kit<br>(includes RM barcode updates)</a>
+                     </li>
+                   </ul>
+                </div>
+                <div class="govuk-grid-column-one-third">
+                   <strong class="govuk-tag govuk-tag--red govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">For Development</strong>
+                   <h3 class="govuk-heading-s">V8</h3>
+                   <p class="govuk-body">Update formatting on Essential worker and Antibody opt in - Feb 4</p>
+                   <ul class="govuk-list govuk-list--bullet">
+                     <li>
+                       <a class="govuk-link--no-visited-state" href="/antigen/v8/global-registration/fingerprick-test">Antibody opt in</a>
+                     </li>
+                     <li>
+                       <a class="govuk-link--no-visited-state" href="/antigen/v8/refer-and-triage/essential-worker">Essential worker</a>
+                     </li>
+                   </ul>
+                </div>
               </div>
           </div>
         </div>
@@ -479,13 +501,13 @@
               <div class="govuk-grid-column-one-third">
                 <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">Live</strong>
                 <h3 class="govuk-heading-s">V1</h3>
-                <p class="govuk-body">Latest update: 27 September 2021</p>
+                <p class="govuk-body">Latest update: 27 January 2022</p>
                 <ul class="govuk-list govuk-list--bullet">
                   <li>
-                    <a href="/litereg-accounts/v1/">Start page</a>
+                    <a href="/IBT/litereg-accounts/e2e-prototypes/live/">Start page</a>
                   </li>
                   <li>
-                    <a href="/litereg-accounts/v1/user-account/login-email">User account</a>
+                    <a href="/IBT/litereg-accounts/live/user-account/login-email">User account</a>
                   </li>
                 </ul>
               </div>
@@ -560,19 +582,27 @@
               </div>
               <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
                 <div style="display: flex;">
-                <div class="govuk-grid-column-one-third">
-                  <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In Testing</strong>
-                  <h3 class="govuk-heading-s">V7 - Update Start Page link to no stock page</h3>
-                  <p class="govuk-body">Created on 14 December 2021</p>
-                  <ul class="govuk-list govuk-list--bullet">
-                    <li>
-                      <a href="/lfd-home-ordering/v7/order-home-test">Start page</a>
-                    </li>
-
-                  </ul>
+                  <div class="govuk-grid-column-one-third">
+                    <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">Live</strong>
+                    <h3 class="govuk-heading-s">V7 - Update no stock page</h3>
+                    <p class="govuk-body">Created on 14 December 2021</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/lfd-home-ordering/v7/order-home-test">Start page</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="govuk-grid-column-one-third">
+                    <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In Design</strong>
+                    <h3 class="govuk-heading-s">V8 - UI Integration</h3>
+                    <p class="govuk-body">Created on 21 January 2022</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/lfd-home-ordering/v8/order-home-test">Start page</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </div>
-          </div>
         </div>
         <div class="govuk-accordion__section ">
           <div class="govuk-accordion__section-header">
@@ -920,12 +950,47 @@
             <div style="display: flex;">
               <div class="govuk-grid-column-one-half">
 
+                <h3 class="govuk-heading-s">LIVE PCR and LFT registration</h3>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>
+                    <a href="/OBT/registration/e2e-prototypes/lft-pcr-with-results-live/start-pages/index">OBT live bulk registration journey</a>
+                  </li>
+                </ul>
+
+                <h3 class="govuk-heading-s">OBT individual accounts</h3>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>
+                    <a href="/OBT/individual-accounts/e2e-prototypes/v3/index ">OBT individual account</a>
+                  </li>
+                </ul>
+
+                <h3 class="govuk-heading-s">OBT individual registration (without accounts)</h3>
+                  <ul class="govuk-list govuk-list--bullet">
+                <li>
+                  <a href="/OBT/individual-reg/e2e-prototypes/v1/index">OBT individual registration - registering a negative LFT</a>
+                </li>
+                <li>
+                  <a href="/OBT/individual-reg/e2e-prototypes/v1/test-details/pcr/time">OBT individual registration - registering a PCR</a>
+                </li>
+                </ul>
+
       <h3 class="govuk-heading-s">Order</h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
           <a href="/organisational/order/v0/index">Get coronavirus tests for a care home - Live (Salesforce)</a>
         </li>
       </ul>
+
+
+<br>
+      <details class="govuk-details" data-module="govuk-details">
+  <summary class="govuk-details__summary">
+    <span class="govuk-details__summary-text">
+      OBT archive prototypes
+    </span>
+  </summary>
+  <div class="govuk-details__text">
+
 
       <h3 class="govuk-heading-s">Register (antibody)</h3>
       <ul class="govuk-list govuk-list--bullet">
@@ -1044,23 +1109,8 @@
           <a href="/organisational/unified-testing/v0/index">Unified Org-Led Testing</a>
         </li>
       </ul>
-
-      <h3 class="govuk-heading-s">PCR and LFT registration</h3>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          <a href="/organisational/lft/carehome-registration/index">Care home PCR and LFT registration</a>
-        </li>
-      </ul>
-
-      <h3 class="govuk-heading-s">OBT individual accounts</h3>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          <a href="/organisational/ind-accounts/v3/index">OBT individual account - create account</a>
-        </li>
-        <li>
-          <a href="/organisational/ind-accounts/v3/sign-in/index">OBT individual account - sign-in to an account</a>
-        </li>
-      </ul>
+    </div>
+</details>
 
 
               </div>
