--- a/app/views/asymptomatic-testing.html
+++ b/app/views/asymptomatic-testing.html
@@ -19,19 +19,19 @@
   </head>
 
   <body class="{{ bodyClasses }}">
-    
+
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
 
     {% block beforeContent %}
     <header class="nhsuk-header nhsuk-header--transactional" role="banner">
       <div class="nhsuk-width-container nhsuk-header__container border-bottom-white desktop-only">
         <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
-    
+
             <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
               <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
               <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
             </svg>
-    
+
           </a>
         </div>
         <div class="nhsuk-header__transactional-service-name desktop-only">
@@ -44,7 +44,7 @@
         <h1 class="nhsuk-heading-xl white-text">Asymptomatic Testing</h1>
         <p class="nhsuk-body white-text">Digital testing products for citizens and international travellers</p>
       </div>
-      
+
     </header>
 
     <nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
@@ -68,45 +68,24 @@
         <main class="nhsuk-main-wrapper {{ mainClasses }}" id="maincontent" role="main">
 
           {% block content %}
-          <h2 class="nhsuk-heading-l">In research</h2>
+          <h2>In research</h2>
+          <p><strong>See what's in testing this week:</strong></p>
 
-          <details class="nhsuk-details">
+          <details class="nhsuk-details relative">
             <summary class="nhsuk-details__summary">
               <span class="nhsuk-details__summary-text">
-                See what's in research this week: 23rd October 2021
+                10th March 2022
               </span>
             </summary>
             <div class="nhsuk-details__text">
               <ul class="nhsuk-list spaced">
                 <li>
-                  <strong>TCP-345: Follow-up test</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test</a>
-                </li>
-                <li>
-                  <strong>TCP-346: Postcode</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode</a>
-                </li>
-                <li>
-                  <strong>TCP-345: Do you have a car?</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car</a>
-                </li>
-                <li>
-                  <strong>TCP-634: Channel Choice</strong> - new bullet in home testing, added logic to hide walk-through and drive-through if user has selected positive day 2 test result as their reason for follow-up test<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test</a>
-                </li>
-                <li>
-                  <strong>TCP-345: NHS Number</strong> - new screens, A/B testing<br>
-                  <span>Option 1: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known</a>
-                  <br>
-                  <span>Option 2: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2</a>
-                </li>
-                <li>
-                  <strong>TCP-345: Confirm people for testing</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed</a>
+                  <strong>LFD Home Order</strong> - Introduce "gate page" for visitors from England to reflect eligibility policy updates<br>
+                  <a class="nhsuk-link" target="_blank" href="/IBT/lfd-home-order/feature-design/SAID-468">Preview</a>
                 </li>
               </ul>
               <div class="nhsuk-action-link">
-                <a class="nhsuk-action-link__link" href="#">
+                <a class="nhsuk-action-link__link" href="research-asymptomatic-previous">
                   <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
                     <path d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
@@ -132,15 +111,16 @@
                   <p class="nhsuk-card__description">
                     Subjects pre-register for an asymptomatic testing site visit.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR (N/A)</a>
                 </div>
               </div>
-          
+
             </li>
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-          
+
               <div class="nhsuk-card">
                 <div class="nhsuk-card__content">
                   <h3 class="nhsuk-card__heading">
@@ -149,12 +129,13 @@
                   <p class="nhsuk-card__description">
                     Subjects visit an asymptomatic testing site for their test and receive email confirmation of their result.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR (N/A)</a>
                 </div>
               </div>
-          
+
             </li>
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
 
@@ -166,15 +147,16 @@
                   <p class="nhsuk-card__description">
                     Subjects order a pack of 7 LFDs to their home for regular, twice weekly, lateral flow testing.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
+                  <a class="nhsuk-card__link stackable" href="/IBT/lfd-home-order/feature-design/" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="/IBT/lfd-home-order/e2e-prototypes/live/" target="_blank">Live Service</a><br>
+                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/lfd-home-order" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR (N/A)</a>
                 </div>
               </div>
-          
+
             </li>
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-          
+
               <div class="nhsuk-card">
                 <div class="nhsuk-card__content">
                   <h3 class="nhsuk-card__heading">
@@ -183,12 +165,13 @@
                   <p class="nhsuk-card__description">
                     Subjects register to collect kits from local outlets, e.g. pharmacies.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR (N/A)</a>
                 </div>
               </div>
-          
+
             </li>
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
 
@@ -200,12 +183,13 @@
                   <p class="nhsuk-card__description">
                     Subjects collect kits from local outlets, e.g. pharmacies.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="/IBT/lfd-collect/e2e-prototypes/live/" target="_blank">Live Service</a><br>
+                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/lfd-collect" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR (N/A)</a>
                 </div>
               </div>
-          
+
             </li>
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
 
@@ -217,12 +201,13 @@
                   <p class="nhsuk-card__description">
                     Subjects report the test strip ID number and result of a lateral flow test.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR (N/A)</a>
                 </div>
               </div>
-          
+
             </li>
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
 
@@ -234,12 +219,13 @@
                   <p class="nhsuk-card__description">
                     Subjects are assisted in reporting lateral flow test results using an algorithm trained by machine learning.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR (N/A)</a>
                 </div>
               </div>
-          
+
             </li>
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
 
@@ -251,12 +237,13 @@
                   <p class="nhsuk-card__description">
                     Subjects are given their rapid lateral flow test results by email and text message.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR (N/A)</a>
                 </div>
               </div>
-          
+
             </li>
           </ul>
 
@@ -287,7 +274,7 @@
           <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link" href="#">Get in touch</a></li>
           <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link" href="#">UCD Team</a></li>
         </ul>
-  
+
         <p class="nhsuk-footer__copyright">&copy; Crown copyright</p>
 
         <p class="nhsuk-footer__list-item nhsuk-u-margin-top-5 desktop-only">All content is available under the <a href="#">Open Government Licence v3.0</a>, except where otherwise stated.</p>
