--- a/app/views/bulk-ordering.html
+++ b/app/views/bulk-ordering.html
@@ -1,4 +1,4 @@
-{% set pageTitle = "International Arrivals" %}
+{% set pageTitle = "Bulk ordering - Org-led testing" %}
 <!DOCTYPE html>
 <!-- [if lt IE 9]><html class="ie8" lang="en"><![endif]--><!--[if IE 9]><html class="ie9" lang="en"><![endif]--><!--[if gt IE 9]><html lang="en" style="{{ html_style }}"> -->
   <head>
@@ -42,7 +42,7 @@
 
       <div class="nhsuk-width-container nhsuk-header__container">
         <h1 class="nhsuk-heading-xl white-text">{{ pageTitle }}</h1>
-        <p class="nhsuk-body white-text">Digital testing products for and on behalf of international travellers.</p>
+        <p class="nhsuk-body white-text">Business users can bulk order test kits to be delivered to them via Salesforce, and onboard new organisations.</p>
       </div>
 
     </header>
@@ -51,9 +51,9 @@
       <div class="nhsuk-width-container">
         <ol class="nhsuk-breadcrumb__list">
           <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/index-new.html">Home</a></li>
-          <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/individual-testing">Individual based services</a></li>
+          <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/organisation-testing">Organisation based services</a></li>
         </ol>
-        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/individual-testing">Back to Individual based services</a></p>
+        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/organisation-testing">Organisation based services</a></p>
       </div>
     </nav>
 
@@ -74,11 +74,12 @@
           <details class="nhsuk-details">
             <summary class="nhsuk-details__summary">
               <span class="nhsuk-details__summary-text">
-                23rd October 2021
+                1st March 2022
               </span>
             </summary>
             <div class="nhsuk-details__text">
-              <ul class="nhsuk-list spaced">
+              There's nothing in testing this week.
+              <!-- <ul class="nhsuk-list spaced">
                 <li>
                   <strong>TCP-345: Follow-up test</strong> - copy changes<br>
                   <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test</a>
@@ -87,34 +88,16 @@
                   <strong>TCP-346: Postcode</strong> - copy changes<br>
                   <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode</a>
                 </li>
-                <li>
-                  <strong>TCP-345: Do you have a car?</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car</a>
-                </li>
-                <li>
-                  <strong>TCP-634: Channel Choice</strong> - new bullet in home testing, added logic to hide walk-through and drive-through if user has selected positive day 2 test result as their reason for follow-up test<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test</a>
-                </li>
-                <li>
-                  <strong>TCP-345: NHS Number</strong> - new screens, A/B testing<br>
-                  <span>Option 1: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known</a>
-                  <br>
-                  <span>Option 2: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2</a>
-                </li>
-                <li>
-                  <strong>TCP-345: Confirm people for testing</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed</a>
-                </li>
               </ul>
               <div class="nhsuk-action-link">
-                <a class="nhsuk-action-link__link" href="research-intl-arrivals-previous">
+                <a class="nhsuk-action-link__link" href="#">
                   <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
                     <path d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
                   </svg>
                   <span class="nhsuk-action-link__text">See all previous updates</span>
                 </a>
-              </div>
+              </div> -->
             </div>
           </details>
 
@@ -123,79 +106,56 @@
           <h2 class="nhsuk-heading-l">User Journeys</h2>
 
           <ul class="nhsuk-grid-row nhsuk-card-group">
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
 
+            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
               <div class="nhsuk-card">
                 <div class="nhsuk-card__content">
                   <h3 class="nhsuk-card__heading">
-                    Admin Journey (assisted)
+                    Onboarding
                   </h3>
                   <p class="nhsuk-card__description">
-                    Order or replace a  coronavirus test for an international arrival. Admins can also find existing coronavirus test orders, cancel orders and issue refunds.
+                    Copy to be updated here
                   </p>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/feature-design/" target="_blank">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/live/" target="_blank">Live Service (N/A)</a><br>
-                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/international-arrivals/assisted/" target="_blank">Github source</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/research/" target="_blank">In Design - Prototype used in UR</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR</a>
                 </div>
               </div>
-
-            </li>
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-
-              <div class="nhsuk-card">
-                <div class="nhsuk-card__content">
-                  <h3 class="nhsuk-card__heading">
-                    Subject Journey (unassisted)
-                  </h3>
-                  <p class="nhsuk-card__description">
-                    Subjects can book a coronavirus (COVID-19) travel test package to enter the UK.
-                  </p>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/unassisted/feature-design/" target="_blank">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/unassisted/e2e-prototypes/live/" target="_blank">Live Service (N/A)</a><br>
-                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/international-arrivals/unassisted/" target="_blank">Github source</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/unassisted/e2e-prototypes/research/" target="_blank">In Design - Prototype used in UR</a>
-                </div>
-              </div>
-
             </li>
 
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-
               <div class="nhsuk-card">
                 <div class="nhsuk-card__content">
                   <h3 class="nhsuk-card__heading">
-                    Refunds
+                    Ordering
                   </h3>
                   <p class="nhsuk-card__description">
-
+                    Organisations can bulk order tests using a spreadsheet.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/feature-design/" target="_blank">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/live/" target="_blank">Live Service (N/A)</a><br>
-                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/international-arrivals/assisted/" target="_blank">Github source</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/research/manage-orders/" target="_blank">In Design - Prototype used in UR (N/A)</a>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR</a>
                 </div>
               </div>
-
             </li>
 
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-
               <div class="nhsuk-card">
                 <div class="nhsuk-card__content">
                   <h3 class="nhsuk-card__heading">
-                    Emails
+                    Courier booking
                   </h3>
                   <p class="nhsuk-card__description">
-
+                    Book a collection for a PCR test if subject can't get to a mailbox or going for elective care.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/emails/feature-design" target="_blank">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/emails/live/" target="_blank">Live Service</a><br>
-                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/international-arrivals/emails" target="_blank">Github source</a><br>
-                  <!-- <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/research/manage-orders/" target="_blank">In Design - Prototype used in UR (N/A)</a> -->
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Development</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Live Service</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="#" target="_blank">In Design - Prototype used in UR</a>
                 </div>
               </div>
-
             </li>
 
           </ul>
@@ -205,7 +165,11 @@
           <h3 class="nhsuk-heading-m">Feedback</h3>
 
           <p class="nhsuk-body">
-            If you have any questions you can <a href="#">message us on Slack</a>. You will need a Slack account if you do not have one. Or you can <a href="#">contact us by email</a>.
+            This area is maintained by the Organisation-based testing team. If you have any questions you can <a href="#">message us on Slack</a>. You will need a Slack account if you do not have one. Or you can <a href="#">contact us by email</a>.
+          </p>
+
+          <p class="nhsuk-hint nhsuk-u-margin-top-8">
+            Updated January 2022
           </p>
 
           {% endblock %}
