--- a/app/views/elective-care.html
+++ b/app/views/elective-care.html
@@ -1,4 +1,4 @@
-{% set pageTitle = "International Arrivals" %}
+{% set pageTitle = "Elective Care" %}
 <!DOCTYPE html>
 <!-- [if lt IE 9]><html class="ie8" lang="en"><![endif]--><!--[if IE 9]><html class="ie9" lang="en"><![endif]--><!--[if gt IE 9]><html lang="en" style="{{ html_style }}"> -->
   <head>
@@ -42,7 +42,7 @@
 
       <div class="nhsuk-width-container nhsuk-header__container">
         <h1 class="nhsuk-heading-xl white-text">{{ pageTitle }}</h1>
-        <p class="nhsuk-body white-text">Digital testing products for and on behalf of international travellers.</p>
+        <p class="nhsuk-body white-text">A service for NHS Trusts to request pre-registered tests to be sent to patients who have upcoming procedures. They can also manage organisations, results and cancel test orders.</p>
       </div>
 
     </header>
@@ -51,9 +51,9 @@
       <div class="nhsuk-width-container">
         <ol class="nhsuk-breadcrumb__list">
           <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/index-new.html">Home</a></li>
-          <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/individual-testing">Individual based services</a></li>
+          <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/organisation-testing">Organisation based services</a></li>
         </ol>
-        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/individual-testing">Back to Individual based services</a></p>
+        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/organisation-testing">Organisation based services</a></p>
       </div>
     </nav>
 
@@ -107,7 +107,7 @@
                 </li>
               </ul>
               <div class="nhsuk-action-link">
-                <a class="nhsuk-action-link__link" href="research-intl-arrivals-previous">
+                <a class="nhsuk-action-link__link" href="research-elective-care-previous">
                   <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
                     <path d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
@@ -123,79 +123,37 @@
           <h2 class="nhsuk-heading-l">User Journeys</h2>
 
           <ul class="nhsuk-grid-row nhsuk-card-group">
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
 
+            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
               <div class="nhsuk-card">
                 <div class="nhsuk-card__content">
                   <h3 class="nhsuk-card__heading">
-                    Admin Journey (assisted)
+                    Patient Management
                   </h3>
                   <p class="nhsuk-card__description">
-                    Order or replace a  coronavirus test for an international arrival. Admins can also find existing coronavirus test orders, cancel orders and issue refunds.
+                    Copy to be updated here
                   </p>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/feature-design/" target="_blank">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/live/" target="_blank">Live Service (N/A)</a><br>
-                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/international-arrivals/assisted/" target="_blank">Github source</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/research/" target="_blank">In Design - Prototype used in UR</a>
+                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
+                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
+                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
                 </div>
               </div>
-
-            </li>
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-
-              <div class="nhsuk-card">
-                <div class="nhsuk-card__content">
-                  <h3 class="nhsuk-card__heading">
-                    Subject Journey (unassisted)
-                  </h3>
-                  <p class="nhsuk-card__description">
-                    Subjects can book a coronavirus (COVID-19) travel test package to enter the UK.
-                  </p>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/unassisted/feature-design/" target="_blank">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/unassisted/e2e-prototypes/live/" target="_blank">Live Service (N/A)</a><br>
-                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/international-arrivals/unassisted/" target="_blank">Github source</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/unassisted/e2e-prototypes/research/" target="_blank">In Design - Prototype used in UR</a>
-                </div>
-              </div>
-
             </li>
 
             <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-
               <div class="nhsuk-card">
                 <div class="nhsuk-card__content">
                   <h3 class="nhsuk-card__heading">
-                    Refunds
+                    Order for Elective Care
                   </h3>
                   <p class="nhsuk-card__description">
-
+                    Copy to be updated here
                   </p>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/feature-design/" target="_blank">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/live/" target="_blank">Live Service (N/A)</a><br>
-                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/international-arrivals/assisted/" target="_blank">Github source</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/research/manage-orders/" target="_blank">In Design - Prototype used in UR (N/A)</a>
+                  <a class="nhsuk-card__link stackable" href="#">In Development</a>
+                  <a class="nhsuk-card__link stackable" href="#">Live Service</a>
+                  <a class="nhsuk-card__link stackable" href="#">Github source</a>
                 </div>
               </div>
-
-            </li>
-
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-
-              <div class="nhsuk-card">
-                <div class="nhsuk-card__content">
-                  <h3 class="nhsuk-card__heading">
-                    Emails
-                  </h3>
-                  <p class="nhsuk-card__description">
-
-                  </p>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/emails/feature-design" target="_blank">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/emails/live/" target="_blank">Live Service</a><br>
-                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/IBT/international-arrivals/emails" target="_blank">Github source</a><br>
-                  <!-- <a class="nhsuk-card__link stackable" href="/IBT/international-arrivals/assisted/e2e-prototypes/research/manage-orders/" target="_blank">In Design - Prototype used in UR (N/A)</a> -->
-                </div>
-              </div>
-
             </li>
 
           </ul>
@@ -205,7 +163,11 @@
           <h3 class="nhsuk-heading-m">Feedback</h3>
 
           <p class="nhsuk-body">
-            If you have any questions you can <a href="#">message us on Slack</a>. You will need a Slack account if you do not have one. Or you can <a href="#">contact us by email</a>.
+            This area is maintained by the Organisation-based testing team. If you have any questions you can <a href="#">message us on Slack</a>. You will need a Slack account if you do not have one. Or you can <a href="#">contact us by email</a>.
+          </p>
+
+          <p class="nhsuk-hint nhsuk-u-margin-top-8">
+            Updated January 2022
           </p>
 
           {% endblock %}
