--- a/app/views/org-based-test-settings.html
+++ b/app/views/org-based-test-settings.html
@@ -1,4 +1,4 @@
-{% set pageTitle = "Antibody Testing" %}
+{% set pageTitle = "OBT Registration" %}
 <!DOCTYPE html>
 <!-- [if lt IE 9]><html class="ie8" lang="en"><![endif]--><!--[if IE 9]><html class="ie9" lang="en"><![endif]--><!--[if gt IE 9]><html lang="en" style="{{ html_style }}"> -->
   <head>
@@ -42,7 +42,7 @@
 
       <div class="nhsuk-width-container nhsuk-header__container">
         <h1 class="nhsuk-heading-xl white-text">{{ pageTitle }}</h1>
-        <p class="nhsuk-body white-text">Testing to see if a subject has ever had covid.</p>
+        <p class="nhsuk-body white-text">Services for Care Homes, Schools, Prisons and other org-based use cases, including individual and bulk registration, testing, reporting and results.</p>
       </div>
 
     </header>
@@ -51,9 +51,9 @@
       <div class="nhsuk-width-container">
         <ol class="nhsuk-breadcrumb__list">
           <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/index-new.html">Home</a></li>
-          <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/individual-testing">Individual based services</a></li>
+          <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/organisation-testing">Organisation based services</a></li>
         </ol>
-        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/individual-testing">Back to Individual based services</a></p>
+        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/organisation-testing">Organisation based services</a></p>
       </div>
     </nav>
 
@@ -74,40 +74,43 @@
           <details class="nhsuk-details">
             <summary class="nhsuk-details__summary">
               <span class="nhsuk-details__summary-text">
-                23rd October 2021
+                Feb 2022
               </span>
             </summary>
             <div class="nhsuk-details__text">
               <ul class="nhsuk-list spaced">
                 <li>
-                  <strong>TCP-345: Follow-up test</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test</a>
-                </li>
-                <li>
-                  <strong>TCP-346: Postcode</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode</a>
-                </li>
-                <li>
-                  <strong>TCP-345: Do you have a car?</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car</a>
-                </li>
-                <li>
-                  <strong>TCP-634: Channel Choice</strong> - new bullet in home testing, added logic to hide walk-through and drive-through if user has selected positive day 2 test result as their reason for follow-up test<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test</a>
-                </li>
-                <li>
-                  <strong>TCP-345: NHS Number</strong> - new screens, A/B testing<br>
-                  <span>Option 1: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known</a>
-                  <br>
-                  <span>Option 2: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2</a>
-                </li>
-                <li>
-                  <strong>TCP-345: Confirm people for testing</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed</a>
+                  <strong><a class="nhsuk-link" href="https://bluesquirrel.atlassian.net/browse/TTOLDT-388">TTOLDT-388:</a> Individual registration (without accounts) - UR with a wider user case</strong><br>
+                  <a class="nhsuk-link" href="/OBT/individual-reg/e2e-prototypes/v2/index">https://govuk-testing-prototype.herokuapp.com/OBT/individual-reg/e2e-prototypes/v2/index</a>
                 </li>
               </ul>
               <div class="nhsuk-action-link">
-                <a class="nhsuk-action-link__link" href="research-antibody-previous">
+                <a class="nhsuk-action-link__link" href="research-org-settings-previous">
+                  <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
+                  </svg>
+                  <span class="nhsuk-action-link__text">See all previous updates</span>
+                </a>
+              </div>
+            </div>
+          </details>
+
+          <details class="nhsuk-details">
+            <summary class="nhsuk-details__summary">
+              <span class="nhsuk-details__summary-text">
+                March 2022
+              </span>
+            </summary>
+            <div class="nhsuk-details__text">
+              <ul class="nhsuk-list spaced">
+                <li>
+                  <strong><a class="nhsuk-link" href="https://bluesquirrel.atlassian.net/browse/TTOLDT-314">TTOLDT-314:</a> UON - Find my organisation</strong><br>
+                  <a class="nhsuk-link" href="/OBT/registration/feature-design/TTOLDT-314-UON/index">https://govuk-testing-prototype.herokuapp.com/OBT/registration/feature-design/TTOLDT-314-UON/index</a>
+                </li>
+              </ul>
+              <div class="nhsuk-action-link">
+                <a class="nhsuk-action-link__link" href="research-org-settings-previous">
                   <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
                     <path d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
@@ -123,24 +126,58 @@
           <h2 class="nhsuk-heading-l">User Journeys</h2>
 
           <ul class="nhsuk-grid-row nhsuk-card-group">
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
 
+            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
               <div class="nhsuk-card">
                 <div class="nhsuk-card__content">
                   <h3 class="nhsuk-card__heading">
-                    Antibody testing
+                    PCR and LFT registration
                   </h3>
                   <p class="nhsuk-card__description">
-                    Subjects register to request a test. Once registered, they get an email or text message inviting them to order a test kit, which might be a few weeks later depending on the criteria for tests.
+                    Most organisation types are now able to register both PCR and LFT tests, along with reporting LFT results.
                   </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a><br>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a><br>
-                  <a class="nhsuk-card__link stackable" href="#">In Design - Prototype used in UR (N/A)</a>
+                  <a class="nhsuk-card__link stackable" href="#">In development (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="/OBT/registration/e2e-prototypes/lft-pcr-with-results-live/start-pages/index">Live service</a><br>
+                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/OBT/registration/e2e-prototypes/lft-pcr-with-results-live">Github source</a><br>
+                    </div>
+              </div>
+            </li>
+
+            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
+              <div class="nhsuk-card">
+                <div class="nhsuk-card__content">
+                  <h3 class="nhsuk-card__heading">
+                    New technology: Individual registration with accounts
+                  </h3>
+                  <p class="nhsuk-card__description">
+                    Use case leads have requested dom care users who are registering test kits for themselves, to be able to use an NHS account to save their personal details.
+                  </p>
+                  <a class="nhsuk-card__link stackable" href="#">In developement (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="#">Live Service (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/OBT/individual-accounts/e2e-prototypes/v3">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="/OBT/individual-accounts/e2e-prototypes/v3/index">In Design - Prototype used in UR</a>
                 </div>
               </div>
-
             </li>
+
+            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
+              <div class="nhsuk-card">
+                <div class="nhsuk-card__content">
+                  <h3 class="nhsuk-card__heading">
+                    New technology: Individual testing without accounts
+                  </h3>
+                  <p class="nhsuk-card__description">
+                    A journey specifically for users who only wish to register tests for them selves.
+                  </p>
+                  <a class="nhsuk-card__link stackable" href="#">In Development (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="#">Live Service (N/A)</a><br>
+                  <a class="nhsuk-card__link stackable" href="https://github.com/NHSDigital/nhs-antibody-testing-registration-prototype/tree/master/app/views/OBT/individual-reg/e2e-prototypes/v1">Github source</a><br>
+                  <a class="nhsuk-card__link stackable" href="/OBT/individual-reg/e2e-prototypes/v1/index">In design - Prototype used in UR</a>
+                    </div>
+              </div>
+            </li>
+
+
 
           </ul>
 
@@ -149,7 +186,11 @@
           <h3 class="nhsuk-heading-m">Feedback</h3>
 
           <p class="nhsuk-body">
-            If you have any questions you can <a href="#">message us on Slack</a>. You will need a Slack account if you do not have one. Or you can <a href="#">contact us by email</a>.
+            This area is maintained by the Organisation-based testing team. If you have any questions you can <a href="#">message us on Slack</a>. You will need a Slack account if you do not have one. Or you can <a href="#">contact us by email</a>.
+          </p>
+
+          <p class="nhsuk-hint nhsuk-u-margin-top-8">
+            Updated January 2022
           </p>
 
           {% endblock %}
