--- a/app/views/research-ibt.html
+++ b/app/views/research-ibt.html
@@ -1,8 +1,4 @@
-{% set pageTitle = "Organisation based testing" %}
-{% set BulkOrderingHref = "bulk-ordering" %}
-{% set ElectiveCareHref = "elective-care" %}
-{% set OrgBasedTestSettingsHref = "org-based-test-settings" %}
-
+{% set pageTitle = "Individual Based Testing" %}
 <!DOCTYPE html>
 <!-- [if lt IE 9]><html class="ie8" lang="en"><![endif]--><!--[if IE 9]><html class="ie9" lang="en"><![endif]--><!--[if gt IE 9]><html lang="en" style="{{ html_style }}"> -->
   <head>
@@ -45,8 +41,7 @@
       </div>
 
       <div class="nhsuk-width-container nhsuk-header__container">
-        <h1 class="nhsuk-heading-xl white-text">Organisation Based Testing</h1>
-        <p class="nhsuk-body white-text">Digital testing products for public and private sector organisations.</p>
+        <h1 class="nhsuk-heading-xl white-text">{{ pageTitle }}</h1>
       </div>
 
     </header>
@@ -55,10 +50,12 @@
       <div class="nhsuk-width-container">
         <ol class="nhsuk-breadcrumb__list">
           <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/index-new.html">Home</a></li>
+          <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/individual-testing">Individual based services</a></li>
         </ol>
-        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/index-new.html">Home</a></p>
+        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/individual-testing">Back to Individual based services</a></p>
       </div>
     </nav>
+
     {% endblock %}
 
     {% block bodyStart %}
@@ -70,53 +67,53 @@
         <main class="nhsuk-main-wrapper {{ mainClasses }}" id="maincontent" role="main">
 
           {% block content %}
-          <h2 class="nhsuk-heading-l">Testing services</h2>
+          <h2 class="nhsuk-heading-l">In research</h2>
 
-          <ul class="nhsuk-grid-row nhsuk-card-group">
+          <p class="nhsuk-body">See what's in testing this week.</p>
 
+          <div class="bulleted-summary-list">
+            <h3 class="nhsuk-heading-m">
+              22nd October 2019
+            </h3>
+            <ul class="nhsuk-list spaced">
+              <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='{{ asymptomaticTestingHref }}';">
+                <strong>TCP-345: Follow-up test</strong> - copy changes<br>
+                <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test</a>
+              </li>
+              <li>
+                <strong>TCP-346: Postcode</strong> - copy changes<br>
+                <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode</a>
+              </li>
+              <li>
+                <strong>TCP-345: Do you have a car?</strong> - copy changes<br>
+                <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car</a>
+              </li>
+              <li>
+                <strong>TCP-634: Channel Choice</strong> - new bullet in home testing, added logic to hide walk-through and drive-through if user has selected positive day 2 test result as their reason for follow-up test<br>
+                <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test</a>
+              </li>
+              <li>
+                <strong>TCP-345: NHS Number</strong> - new screens, A/B testing<br>
+                <span>Option 1: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known</a>
+                <br>
+                <span>Option 2: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2</a>
+              </li>
+              <li>
+                <strong>TCP-345: Confirm people for testing</strong> - copy changes<br>
+                <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed</a>
+              </li>
+            </ul>
+          </div>
 
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-              <div class="nhsuk-card nhsuk-card--clickable" onclick="location.href='{{ ElectiveCareHref }}';">
-                <div class="nhsuk-card__content">
-                  <h3 class="nhsuk-card__heading nhsuk-heading-m">
-                    <a class="nhsuk-card__link" href="{{ ElectiveCareHref }}">Elective Care</a>
-                  </h3>
-                  <p class="nhsuk-card__description">A service for NHS Trusts to request pre-registered tests to be sent to patients who have upcoming procedures. They can also manage results and cancel test orders.</p>
-                </div>
-              </div>
-            </li>
-
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-              <div class="nhsuk-card nhsuk-card--clickable" onclick="location.href='{{ OrgBasedTestSettingsHref }}';">
-                <div class="nhsuk-card__content">
-                  <h3 class="nhsuk-card__heading nhsuk-heading-m">
-                    <a class="nhsuk-card__link" href="{{ OrgBasedTestSettingsHref }}">OBT registration</a>
-                  </h3>
-                  <p class="nhsuk-card__description">Services for Care Homes, Schools, Prisons and other org-based use cases. Service enables single and bulk registration of PCR tests and LFTs, along with the reporting of LFT results.</p>
-                </div>
-              </div>
-            </li>
-
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-              <div class="nhsuk-card nhsuk-card--clickable" onclick="location.href='{{ BulkOrderingHref }}';">
-                <div class="nhsuk-card__content">
-                  <h3 class="nhsuk-card__heading nhsuk-heading-m">
-                    <a class="nhsuk-card__link" href="{{ BulkOrderingHref }}">Bulk ordering - Org-led testing (OLT)</a>
-                  </h3>
-                  <p class="nhsuk-card__description">Business users can bulk order test kits to be delivered to them via Salesforce, and onboarding of new organisations.</p>
-                </div>
-              </div>
-            </li>
-
-          </ul>
-
-          <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
-
-          <h3 class="nhsuk-heading-m">Feedback</h3>
-
-          <p class="nhsuk-body">
-            If you have any questions you can <a href="#">message us on Slack</a>. You will need a Slack account if you do not have one. Or you can <a href="#">contact us by email</a>.
-          </p>
+          <div class="nhsuk-action-link">
+            <a class="nhsuk-action-link__link" href="research-ibt-all">
+              <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
+                <path d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
+              </svg>
+              <span class="nhsuk-action-link__text">See all previous updates</span>
+            </a>
+          </div>
 
           {% endblock %}
         </form>
