--- a/app/views/research-symptomatic-previous.html
+++ b/app/views/research-symptomatic-previous.html
@@ -1,4 +1,4 @@
-{% set pageTitle = "Antibody Testing" %}
+{% set pageTitle = "Symptomatic Testing" %}
 <!DOCTYPE html>
 <!-- [if lt IE 9]><html class="ie8" lang="en"><![endif]--><!--[if IE 9]><html class="ie9" lang="en"><![endif]--><!--[if gt IE 9]><html lang="en" style="{{ html_style }}"> -->
   <head>
@@ -42,7 +42,6 @@
 
       <div class="nhsuk-width-container nhsuk-header__container">
         <h1 class="nhsuk-heading-xl white-text">{{ pageTitle }}</h1>
-        <p class="nhsuk-body white-text">Testing to see if a subject has ever had covid.</p>
       </div>
 
     </header>
@@ -52,8 +51,9 @@
         <ol class="nhsuk-breadcrumb__list">
           <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/index-new.html">Home</a></li>
           <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/individual-testing">Individual based services</a></li>
+          <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/symptomatic-testing">Symptomatic testing</a></li>
         </ol>
-        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/individual-testing">Back to Individual based services</a></p>
+        <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="/symptomatic-testing">Back to Symptomatic testing</a></p>
       </div>
     </nav>
 
@@ -68,89 +68,97 @@
         <main class="nhsuk-main-wrapper {{ mainClasses }}" id="maincontent" role="main">
 
           {% block content %}
-          <h2>In research</h2>
-          <p><strong>See what's in testing this week:</strong></p>
+          <h2 class="nhsuk-heading-l">Previous research</h2>
 
-          <details class="nhsuk-details">
-            <summary class="nhsuk-details__summary">
-              <span class="nhsuk-details__summary-text">
-                23rd October 2021
-              </span>
-            </summary>
-            <div class="nhsuk-details__text">
+          <p class="nhsuk-body">You'll find links to all of our research prototypes for Symptomatic testing here.</p>
+
+          <div class="bulleted-summary-list">
+            <div class="relative">
+              <h3 class="nhsuk-heading-m">
+                26th January 2022
+              </h3>
+              <p class="nhsuk-body"><a class="nhsuk-link right-link" href="#">See all changes on github</a></p>
               <ul class="nhsuk-list spaced">
                 <li>
                   <strong>TCP-345: Follow-up test</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test</a>
+                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/follow-up-test">View prototype</a>
                 </li>
                 <li>
                   <strong>TCP-346: Postcode</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode</a>
+                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/postcode">View prototype</a>
                 </li>
                 <li>
                   <strong>TCP-345: Do you have a car?</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car</a>
+                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/do-you-have-a-car">View prototype</a>
                 </li>
                 <li>
                   <strong>TCP-634: Channel Choice</strong> - new bullet in home testing, added logic to hide walk-through and drive-through if user has selected positive day 2 test result as their reason for follow-up test<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test">https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test</a>
+                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/refer-and-triage/how-will-you-get-test">View prototype</a>
                 </li>
                 <li>
                   <strong>TCP-345: NHS Number</strong> - new screens, A/B testing<br>
-                  <span>Option 1: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known</a>
+                  <span>Option 1: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known">View prototype</a>
                   <br>
-                  <span>Option 2: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2</a>
+                  <span>Option 2: </span><a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/nhs-number-known-option-2">View prototype</a>
                 </li>
                 <li>
                   <strong>TCP-345: Confirm people for testing</strong> - copy changes<br>
-                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed">https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed</a>
+                  <a class="nhsuk-link" href="https://govuk-testing-prototype.herokuapp.com/antigen/v2/global-registration/people-confirmed">View prototype</a>
                 </li>
               </ul>
-              <div class="nhsuk-action-link">
-                <a class="nhsuk-action-link__link" href="research-antibody-previous">
-                  <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
-                  </svg>
-                  <span class="nhsuk-action-link__text">See all previous updates</span>
-                </a>
-              </div>
             </div>
-          </details>
 
-          <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
 
-          <h2 class="nhsuk-heading-l">User Journeys</h2>
-
-          <ul class="nhsuk-grid-row nhsuk-card-group">
-            <li class="nhsuk-grid-column-one-half nhsuk-card-group__item">
-
-              <div class="nhsuk-card">
-                <div class="nhsuk-card__content">
-                  <h3 class="nhsuk-card__heading">
-                    Antibody testing
-                  </h3>
-                  <p class="nhsuk-card__description">
-                    Subjects register to request a test. Once registered, they get an email or text message inviting them to order a test kit, which might be a few weeks later depending on the criteria for tests.
-                  </p>
-                  <a class="nhsuk-card__link stackable" href="#">In Development</a><br>
-                  <a class="nhsuk-card__link stackable" href="#">Live Service</a><br>
-                  <a class="nhsuk-card__link stackable" href="#">Github source</a><br>
-                  <a class="nhsuk-card__link stackable" href="#">In Design - Prototype used in UR (N/A)</a>
-                </div>
-              </div>
-
-            </li>
-
-          </ul>
-
-          <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
-
-          <h3 class="nhsuk-heading-m">Feedback</h3>
-
-          <p class="nhsuk-body">
-            If you have any questions you can <a href="#">message us on Slack</a>. You will need a Slack account if you do not have one. Or you can <a href="#">contact us by email</a>.
-          </p>
+            <div class="relative">
+              <h3 class="nhsuk-heading-m">
+                19th October 2021
+              </h3>
+              <p class="nhsuk-body"><a class="nhsuk-link right-link" href="#">See all changes on github</a></p>
+              <ul class="nhsuk-list spaced">
+                <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='#';">
+                  <strong><a class="nhsuk-link" href="#">TCP-345</a>: Follow-up test</strong> - copy changes
+                </li>
+                <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='#';">
+                  <strong><a class="nhsuk-link" href="#">TCP-346</a>: Postcode</strong> - copy changes
+                </li>
+                <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='#';">
+                  <strong><a class="nhsuk-link" href="#">TCP-345</a>: NHS Number</strong> - new screens, A/B testing
+                </li>
+              </ul>
+            </div>
+            <div class="relative">
+              <h3 class="nhsuk-heading-m">
+                14th October 2021
+              </h3>
+              <p class="nhsuk-body"><a class="nhsuk-link right-link" href="#">See all changes on github</a></p>
+              <ul class="nhsuk-list spaced">
+                <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='#';">
+                  <strong><a class="nhsuk-link" href="#">TCP-345</a>: Follow-up test</strong> - copy changes
+                </li>
+                <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='#';">
+                  <strong><a class="nhsuk-link" href="#">TCP-346</a>: Postcode</strong> - copy changes
+                </li>
+                <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='#';">
+                  <strong><a class="nhsuk-link" href="#">TCP-345</a>: NHS Number</strong> - new screens, A/B testing
+                </li>
+              </ul>
+            </div>
+            <div class="relative">
+              <h3 class="nhsuk-heading-m">
+                27th September 2021
+              </h3>
+              <p class="nhsuk-body"><a class="nhsuk-link right-link" href="#">See all changes on github</a></p>
+              <ul class="nhsuk-list spaced">
+                <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='#';">
+                  <strong><a class="nhsuk-link" href="#">TCP-367</a>: Follow-up test</strong> - copy changes
+                </li>
+                <li class="nhsuk-card nhsuk-card--clickable" onclick="location.href='#';">
+                  <strong><a class="nhsuk-link" href="#">TCP-346</a>: Postcode</strong> - copy changes
+                </li>
+              </ul>
+            </div>
+            <p class="govuk-body"><a class="nhsuk-link" href="#">Top</a></p>
+          </div>
 
           {% endblock %}
         </form>
