--- a/app/views/IBT/lfd-self-report/e2e-prototypes/research/barcode-scan-android.html
+++ b/app/views/IBT/lfd-self-report/e2e-prototypes/research/barcode-scan-android.html
@@ -58,7 +58,7 @@
                 <image src="/assets/govuk-logotype-crown-0cdbde943be3a6518a5d7c00b607d134f4d5e3d0e8c68a1bfa2dc81f1f3edc4e.png" class="gem-c-modal-dialogue__logotype-crown-fallback-image"></image>
               </svg>
             </div>
-            <div class="gem-c-modal-dialogue__content" id="scanner-wrapper">
+            <div class="gem-c-modal-dialogue__content-scanner" id="scanner-wrapper">
               <p class="govuk-body">
                 <strong>Scanning will start automatically when the QR code is within the frame</strong>
               </p>
@@ -73,7 +73,7 @@
                 scanSettings.searchArea='{"x":0.1,"y":0.2,"width":0.8,"height":0.6}'
                 guiStyle="viewfinder"
                 enableTorchToggle="true"
-                videoFit="cover"
+                videoFit="contain"
                 scanSettings.enabledSymbologies='["data-matrix", "code128", "qr"]'
                 >
               </scandit-barcode-picker>
