--- a/app/views/IBT/lfd-self-report/e2e-prototypes/research/barcode-manual-scan-android.html
+++ b/app/views/IBT/lfd-self-report/e2e-prototypes/research/barcode-manual-scan-android.html
@@ -62,8 +62,8 @@
           </fieldset>
         </div>
 
-        <a id="scan-button" class="govuk-button" data-toggle="modal" data-target="modal-with-data-attributes" href="/IBT/lfd-self-report/e2e-prototypes/{{version}}/barcode-manual-scan-android">Scan barcode</a>
-        <button id="manual-entry" class="govuk-button govuk-button--secondary" data-module="govuk-button">Enter barcode manually</button>
+        <a id="scan-button" class="govuk-button" data-toggle="modal" data-target="modal-with-data-attributes" href="/IBT/lfd-self-report/e2e-prototypes/{{version}}/barcode-manual-scan-android">Continue</a>
+        <button id="manual-entry" class="govuk-button govuk-button--secondary" data-module="govuk-button">Use test strip QR code scanner</button>
 
         <div class="gem-c-modal-dialogue" data-module="modal-dialogue" id="modal-window-2" style="display: block;">
           <div class="gem-c-modal-dialogue__overlay"></div>
@@ -148,6 +148,7 @@
               <p class="govuk-body">You will need to allow camera permissions to use the scanner.</p>
               <p class="govuk-body">You may need to change the settings on your device.</p>
               <p class="body"><a href="#" target="blank">iOS(Apple): how to allow camera access (opens in new tab)</a></p>
+              <p class="body"><a href="https://support.google.com/android/answer/9431959?hl=en-GB" target="blank">Android: how to allow camera access (opens in new tab)</a></p>
             </div>
             <a class="gem-c-modal-dialogue__close-button" aria-label="Close modal dialogue" href="/IBT/lfd-self-report/e2e-prototypes/{{version}}/barcode-manual">×</a>
           </dialog>
